<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/aqi_scale_height">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="2dp"
        android:layout_above="@+id/scale_container"
        android:weightSum="6">
        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_weight="0.5"/>
        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/aqi_val_good"/>
        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/aqi_val_moderate"/>
        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/aqi_val_unhealthy_sensitive"/>
        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/aqi_val_unhealthy"/>
        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/aqi_val_very_unhealthy"/>
        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="500"
            android:layout_weight="0.5"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/scale_container"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="35dp"
        android:weightSum="6"
        android:layout_alignParentBottom="true">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/aqi_good">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:text="@string/aqi_good"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/aqi_moderate">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:text="@string/aqi_moderate"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/aqi_unhealthy_for_sensitive">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:text="@string/unhealthy_sensitive"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/aqi_unhealthy">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:text="@string/aqi_unhealthy"/>
        </RelativeLayout>
        <RelativeLayout
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/aqi_very_unhealthy">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:text="@string/very_unhealthy"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/aqi_hazardous">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:text="@string/aqi_hazardous"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>