<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eu.citi_sense.vic.citi_sense.StationActivity">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/station_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#222222"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/ic_android_arrow_back"
            android:background="@drawable/light_selector"
            android:onClick="backButtonClicked"/>
        <TextView
            android:id="@+id/station_action_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:text="VESNA"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/station_toolbar">
        <RelativeLayout
            android:id="@+id/station_aqi_graph"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:clipToPadding="false"
            android:background="@color/lighter_dark_blue">
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/stations_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/stations_aqi_scale"
                android:layout_above="@+id/station_aqi_graph_legend"/>
            <TextView
                android:id="@+id/station_aqi_graph_legend"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:gravity="top|center"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@id/stations_aqi_scale"
                android:textColor="#ffffff"
                android:text="@string/aqi_legend"/>
            <LinearLayout
                android:id="@+id/stations_aqi_scale"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:weightSum="4"
                android:layout_marginRight="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:text="@string/aqi_hazardous"
                    android:textColor="#fff"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:text="@string/aqi_unhealthy"
                    android:textColor="#fff"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:text="@string/aqi_moderate"
                    android:textColor="#fff"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aqi_good"
                    android:textColor="#fff"/>
            </LinearLayout>
        </RelativeLayout>
        <ListView
            android:id="@+id/pollutants_station_list_view"
            android:layout_width="match_parent"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:layout_height="match_parent"
            android:clickable="false"
            android:layout_marginTop="@dimen/station_chart_height">
        </ListView>
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/station_location_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/station_aqi_graph"
            android:layout_marginTop="-36dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_location_white_fab"
            android:onClick="locationFABClicked"
            fab:fab_size="normal"/>
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/station_analysis_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/station_aqi_graph"
            android:layout_toLeftOf="@+id/station_location_fab"
            android:layout_marginTop="-36dp"
            android:src="@drawable/ic_grafi_light"
            android:onClick="analysisFABClicked"
            fab:fab_size="normal"/>
    </RelativeLayout>
</RelativeLayout>
