<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:id="@+id/search_wrapper"
    android:layout_width="match_parent"
    android:layout_height="@dimen/pullup_panel_height"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/status_bar">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/temp_sliding_menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/temp_sliding_menu_bg">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textColor="#ffffff"
                android:gravity="center"
                android:layout_marginTop="1dp"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/sliding_menu_temp"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginTop="-5px"
                android:text="23°ᶜ"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/aqi_sliding_menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@color/aqi_moderate"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aqi"
                android:textColor="#ffffff"
                android:gravity="center"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/sliding_menu_aqi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="-5px"
                android:text="MODERATE"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/humidity_sliding_menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:background="@color/humidity_sliding_menu_bg">
            <TextView
                android:layout_marginTop="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="#ffffff"
                android:gravity="center"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/sliding_menu_humidity"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:layout_marginTop="-5px"
                android:gravity="center"
                android:text="65%"/>
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:background="@color/light_gray_background"
        android:layout_below="@id/status_bar">
        <org.apmem.tools.layouts.FlowLayout
            android:gravity="center"
            android:id="@+id/pollutant_cards_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </org.apmem.tools.layouts.FlowLayout>
    </ScrollView>
</RelativeLayout>
</RelativeLayout>