<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/sliding_menu_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/flat_bg"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ljubljana"
            android:textColor="#fff"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="12dp"
            android:background="@color/flat_title_bg"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/sliding_menu_chart"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="-50dp"
            android:orientation="horizontal">
            <RelativeLayout
                android:orientation="vertical"
                android:id="@+id/temp_sliding_menu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/temp_sliding_menu_bg">
                <TextView
                    android:layout_marginTop="-5px"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:textSize="10sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="20°ᶜ"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/aqi_sliding_menu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@color/aqi_good"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="-5px"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aqi"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:textSize="10sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="GOOD"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/humidity_sliding_menu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:background="@color/humidity_sliding_menu_bg">
                <TextView
                    android:layout_marginTop="-5px"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:textSize="10sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="68%"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true">

    </ScrollView>
</LinearLayout>